# dotsama-arbitrage

./: .gitignore  README.md  asset_registry.json  curl.txt  lp_timestamps.txt  package.json
arb_handler/: Cargo.toml  notes.txt
arb_handler/dailyNotes/: 2024-07-25.md  2024-07-30.md
arb_handler/src/: adj_list_node.rs  adjacency_list.rs  adjacency_list_2.rs  adjacency_table.rs  adjacency_table_2.rs  asset_registry.rs  asset_registry_2.rs  fee_book.rs  lib.rs  liq_pool.rs  liq_pool_registry.rs  liq_pool_registry_2.rs  main.rs  parachain_ids.txt  result_logger.rs  target_tokens.txt  token.rs  token_graph.rs  token_graph_2.rs  token_node.rs  xcm.txt
arb_handler/src/old_classes/: adj_list_node.rs  adjacency_list.rs  adjacency_list_3.rs  evm_reader.rs  token_graph_old.rs
assets/: allAssets.json  all_handler.ts  asset_registry.json  asset_types.ts  ignore_list.json  package.json
astr/: all_assets.txt  all_liq_pools.txt  all_token_holders.txt  astr_handler.js  liq_pool_registry.txt  text_reader.js  token_registry.txt  wastr.txt  wastr_liq_pool_addresses.txt  wastr_manual.txt
bnc/: asset_registry  bnc_handler.js  liq_pool_registry  liq_pool_registry_2  liq_pool_registry_old  merged_assets
glmr/: all_liq_pools.txt  all_token_holders.txt  glmr_handler.js  liq_pool_registry.txt  text_reader.js  token_registry.txt  wglmr.txt  wglmr_liq_pool_addresses.txt  wglmr_trading_pairs.txt
heiko/: hko_handler.ts  package.json
kar/: asset_registry  calculator.js  kar_asset_registry  kar_asset_registry_2  kar_handler.js  liq_pool_registry  liqpools.txt  native_assets.js  test.js  (+1 more)
(+144 files in other folders)
