[package]
name = "arb_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
num = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures = "0.3"
bigdecimal = "0.3"

[profile.dev]
# opt-level = 0
incremental = true
